Adding block storage, config

--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,9 @@ grpcio==1.59.0
 grpcio-tools==1.59.0
 protobuf==4.24.3
 pyjwt==2.3.0
+rocksdb-py
+aiofiles
+aiocache
+aioconsole 
+grpcio-tools
+flask
